# PatientsWithPersonality

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  keys.json.example  pyproject.toml  run_job.sh
configs/experiment/: everyday_patient_sweep.yaml  helpmed_benchmark_default.yaml  helpmed_benchmark_population.yaml  helpmed_dataset.yaml  llm_feasibility.yaml  metaprompt_tuning.yaml  metaprompt_tuning_dataset.yaml  patient_comparison_default.yaml  patient_comparison_followup.yaml  posthoc_eval.yaml
docs/: index.html
frontend/: README.md  app.py  evaluation_explorer.py  helpers.py
labeling-gui/: app.py  assignments.py  components.py  data.py  storage.py  study_config.yaml
labeling-gui/assets/: keyboard.js  style.css
labeling-gui/pages/: personality.py  realism.py
notebooks/: debug_eval.ipynb  debug_patient.ipynb  eval_doctor_study.ipynb  eval_helpmed_benchmark.ipynb  eval_llm_feasibility.ipynb  eval_metaprompt_tuning.ipynb  eval_personality.ipynb  eval_personapatient.ipynb  eval_sim_comparison.ipynb  explore_helpmed_chats.ipynb  plot_motivation.ipynb  preprocess_aci_bench.ipynb
patient_simulator/: data_extraction.py  eval.py
patient_simulator/misc/: diversity.py  llm.py  llm_feasibility.py  plotting.py  profile_comparison.py  style.mplstyle  utils.py
patient_simulator/patients/: __init__.py  agentclinic_patient.py  (+8 more)
scripts/: create_helpmed_dataset.py  create_metaprompt_tuning_dataset.py  run_helpmed_benchmark.py  run_llm_feasibility.py  run_metaprompt_tuning.py  run_patient_comparison.py  run_posthoc_eval.py
tests/: test_state_aware_patient.py
(+10 files in other folders)
