[project]
name = "patient-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-api-core>=2.28.1",
    "google-genai>=1.47.0",
    "huggingface-hub>=0.23.0",
    "httpx>=0.27.0",
    "numpy>=2.0.2",
    "openai>=1.0.0",
    "pandas>=2.3.3",
    "streamlit>=1.51.0",
    "vllm>=0.15.1",
    "spacy>=3.7.0",
    "sentence-transformers>=3.0.0",
    "outlines>=0.0.46",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "tqdm>=4.67.1",
    "seaborn>=0.13.2",
    "py-readability-metrics>=1.4.5",
    "nltk>=3.9.2",
    "ipykernel>=7.1.0",
    "vadersentiment>=3.3.2",
    "pydantic>=2.12.4",
    "hydra-core>=1.3.2",
    "transformers>=4.56.0,<5",
    "safetensors>=0.7.0",
    "datasets>=4.5.0",
    "promptolution>=2.2.2",
    "wordcloud>=1.9.6",
    "plotly>=6.6.0",
    "nbformat>=5.10.4",
    "dash>=2.14.0",
    "pyyaml>=6.0",
    "anthropic[vertex]>=0.79.0",
    "google-cloud-aiplatform>=1.149.0",
]


[tool.uv]
environments = ["sys_platform == 'linux' and python_full_version == '3.12.*'"]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "3e4b8d63ef4b3e04add27827abbf30d6a8640f30" }


[[tool.uv.dependency-metadata]]
name = "transformers"
version = "4.58.0"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
